# AI_Chat_Agent_Learning_Lab

./: .gitignore  CUSTOMIZATION.md  README.md  app.py  main.py  pyproject.toml
App/: CUSTOMIZATION.md  agent.py  tools.py
SDKs_playground/: README.md  pyproject.toml
SDKs_playground/claude/: claude.ipynb
SDKs_playground/mistral/: mistral.ipynb
