[project]
name = "sdks-playground"
version = "0.1.0"
description = "SDKs playground for learning various AI provider SDKs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # AI Provider SDKs
    "anthropic>=0.34.0",
    "openai>=1.0.0",
    "google-generativeai>=0.8.0",
    "huggingface-hub>=0.24.0",
    "transformers>=4.40.0",
    "mistralai>=1.0.0",
    "cohere>=4.0.0",
    # RAG and Vector Store
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.7.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "markdown>=3.5.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
]
